# pacman

./: .anjuta_sym_db.db  .gitignore  AUTHORS  AUTHORS~  ChangeLog  ChangeLog~  Dockerfile  Makefile  Makefile.am  Makefile.am~  Makefile.in  Makefile.in~  Makefile~  NEWS  README  README.md  README~  TODO  TODO~  aclocal.m4  autogen.sh  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure.ac~  configure.scan  libtool  pacman.desktop
.anjuta/: default.profile
.anjuta/session/: anjuta.session  dock-layout.xml
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  output.5  output.6  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6
data/: Makefile  Makefile.am  Makefile.in
data/fonts/: Makefile  Makefile.am  Makefile.in
data/gfx/: Makefile  Makefile.am  Makefile.in
data/sounds/: Makefile  Makefile.am  Makefile.in
data/txt/: Makefile.am  Makefile.in  gamecontrollerdb.txt
debian/: changelog  control  copyright  rules
m4/: ChangeLog
src/: Makefile  Makefile.am  Makefile.in  cmdline_options.cpp  cmdline_options.h  config_file.cpp  config_file.h  constants.cpp  constants.h  figur.cpp  figur.h  funny_animation.cpp  funny_animation.h  game.cpp  game.h  gamecontroller.cpp  gamecontroller.h  gamecontrollerdb_test.txt  ghost_figur.cpp  ghost_figur.h  highscore.cpp  highscore.h  labyrinth.cpp  labyrinth.h  labyrinth_observer.h  level.cpp  level.h  main.cc  menu.cpp  menu.h  menu_about.cpp  menu_about.h  menu_item.cpp  menu_item.h  menu_main.cpp  menu_main.h  menu_options.cpp  menu_options.h  pacman.cpp  pacman.cpp~  (+15 more)
src/.deps/: pacman-figur.Po  pacman-ghost_figur.Po  pacman-pacman.Po  pacman-pacman_figur.Po  pacman-pille.Po  pacman-schiene.Po
