## Process this file with automake to produce Makefile.in


datadir_gfxdir =  $(datadir)/pacman/gfx
dist_datadir_gfx_DATA = augen_0.png \
	augen_1.png \
	augen_2.png \
	augen_3.png \
	blinky_1.png \
	blinky_2.png \
	clyde_1.png \
	clyde_2.png \
	hintergrund2.png \
	hintergrund_schienen.png \
	inky_1.png \
	inky_2.png \
	pacman.png \
	pacman_die_1.png \
	pacman_die_2.png \
	pacman_die_3.png \
	pacman_die_4.png \
	pacman_die_5.png \
	pacman_die_6.png \
	pacman_die_7.png \
	pacman_die_8.png \
	pacman_die_9.png \
	pacman_die_9_alt.png \
	pacman_links_1.png \
	pacman_links_2.png \
	pacman_oben_1.png \
	pacman_oben_2.png \
	pacman_rechts_1.png \
	pacman_rechts_2.png \
	pacman_unten_1.png \
	pacman_unten_2.png \
	pille.png \
	pinky_1.png \
	pinky_2.png \
	superpille_1.png \
	superpille_2.png \
	superpille_3.png \
	escaping_ghost_1.png \
	escaping_ghost_2.png \
	escaping_ghost_white_1.png \
	escaping_ghost_white_2.png \
	cherry.png \
	strawberry.png \
	orange.png \
	apple.png \
	grapes.png \
	banana.png \
	pear.png \
	key.png \
	pacman_die_10.png \
	title_pacman.png \
	pacman_desktop.png
