## Process this file with automake to produce Makefile.in


datadir_soundsdir =  $(datadir)/pacman/sounds
dist_datadir_sounds_DATA = munch_a.wav \
	munch_b.wav \
	intro.wav \
	siren_slow.wav \
	death_1.wav \
	extra_man.wav \
	fruit.wav \
	large_pellet_loop.wav \
	ghost_eat_3.wav \
	ghost_eat_1.wav \
	siren_medium.wav \
	siren_fast.wav
